--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -20,45 +20,16 @@ jobs:
           echo "Non-Linux Matrix: ${{ steps.matrix.outputs.non_linux_matrix }}"
 
     outputs:
-      linux_containers_matrix: ${{ steps.matrix.outputs.linux_containers_matrix }}
-      linux_shells_matrix: ${{ steps.matrix.outputs.linux_shells_matrix }}
-      non_linux_matrix: ${{ steps.matrix.outputs.non_linux_matrix }}
+      strategy: ${{ steps.matrix.outputs.strategy }}
           
-  Linux:
+  Test:
     needs: [Matrix]
-    strategy: ${{ fromJSON(needs.Matrix.outputs.linux_containers_matrix)}}
+    strategy: ${{ fromJSON(needs.Matrix.outputs.strategy)}}
     runs-on: ${{ matrix.runs-on }}
-    container:
-      image: ${{ matrix.image }}
+    container: ${{ fromJSON(matrix.container) }}
     steps:
       - name: Run Tests
         id: tests
-        uses: Invicton-Labs/terraform-module-testing-configuration/linux-containers@dev
+        uses: Invicton-Labs/terraform-module-testing-configuration/test@dev
         with:
-          terraform_version: ${{ matrix.terraform_version }}
-          testing_path: tester
-                    
-  LinuxShells:
-    needs: [Matrix]
-    strategy: ${{ fromJSON(needs.Matrix.outputs.linux_shells_matrix)}}
-    runs-on: ${{ matrix.runs-on }}
-    container:
-    steps:
-      - name: Run Tests
-        id: tests
-        uses: Invicton-Labs/terraform-module-testing-configuration/linux-shells@dev
-        with:
-          terraform_version: ${{ matrix.terraform_version }}
-          testing_path: tester       
-
-  NonLinux:
-    needs: [Matrix]
-    strategy: ${{ fromJSON(needs.Matrix.outputs.non_linux_matrix)}}
-    runs-on: ${{ matrix.runs-on }}
-    steps:
-      - name: Run Tests
-        id: tests
-        uses: Invicton-Labs/terraform-module-testing-configuration/non-linux@dev
-        with:
-          terraform_version: ${{ matrix.terraform_version }}
           testing_path: tester
