--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -31,3 +31,13 @@ jobs:
         uses: Invicton-Labs/terraform-module-testing-configuration/test@dev
         with:
           testing_path: tester
+          
+  # This job just waits for all other jobs to pass. We have it here
+  # so our branch protection rule can reference a single job, instead
+  # of needing to list every matrix value of every job above.
+  Passed:
+    runs-on: ubuntu-latest
+    needs: [Test]
+    steps:
+    - name: Mark tests as passed
+      run: echo "🎉"
